trunk/adminuser@universalcontainer.com/src/objects/Interviewer__c.object
<CustomObject>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Interviewers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Interviewer_Number__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Interviewer Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Interviewers</relationshipLabel>
        <relationshipName>Interviewers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managerial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Interviewer</label>
    <nameField>
        <displayFormat>INT-{0000}</displayFormat>
        <label>Interviewer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interviewers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>